Se edita diseño de la pag

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         </select><br><br>
         <button id="downloadAllButton" class="BotonDescargar">Descargar casos TICS</button>
     </div>
+    <div class="nav2"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
