--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/estilos.css">
     <title>Indicadores TICS</title>
+    <link rel="icon" type="image/x-icon" href="imagenes/logo2.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
 <body>
-    <div class="nav">
-        +57 (8) 261 0014 servicio.alcliente@ganagana.com.co
-    </div>
+    <div class="nav"> +57 (8) 261 0014 servicio.alcliente@ganagana.com.co </div>
     <div class="imagenes">
         <img src="imagenes/logo2.png" title="GanaGana" class="logo2">
         <img src="imagenes/logo3.png" title="Tics" class="logo3">
@@ -18,7 +17,7 @@
     <h1>INDICADORES </h1><br><h2> TICS</h2>
     <div class="container">
         <form>
-            <label for="fileInput" class="file-label">Seleccionar archivo CSV</label>
+            <label for="fileInput" class="file-label"><strong>Seleccionar archivo CSV</strong></label>
             <span id="fileName">No se ha selecciona un archivo CSV</span>
             <input type="file" id="fileInput" accept=".csv" title="Selecciona un archivo CSV" class="hidden2">
             <br><br><hr>
@@ -56,10 +55,9 @@
                 <option value="952">Yesi Alexander Rios Ceballos</option>
             </optgroup>
         </select><br><br>
-        <button id="downloadAllButton" class="BotonDescargar">Descargar casos TICS</button>
+        <button id="downloadAllButton" class="BotonDescargar"><strong>Descargar casos TICS</strong></button>
     </div>
     <div class="nav2"></div>
-    </div>
     <script src="script.js"></script>
 </body>
 </html>
