--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
 <body>
-    <div class="nav"> +57 (8) 261 0014 servicio.alcliente@ganagana.com.co </div>
+    <div class="nav"></div>
     <div class="imagenes">
         <img src="imagenes/logo2.png" title="GanaGana" class="logo2">
         <img src="imagenes/logo3.png" title="Tics" class="logo3">
