Parte final, entregable

--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
     <div class="container">
         <form>
             <label for="fileInput" class="file-label"><strong>Seleccionar archivo CSV</strong></label>
-            <span id="fileName">No se ha selecciona un archivo CSV</span>
+            <span id="fileName"><b>No se ha selecciona un archivo CSV</b></span>
             <input type="file" id="fileInput" accept=".csv" title="Selecciona un archivo CSV" class="hidden2">
             <br><br><hr>
             <button id="startButton" title="Iniciar" hidden ></button>
         </form>
         <select name="tecnico" id="tecnico" class="tecnico" title="Selecciona Técnico">
-            <option selected disabled>TECNICO</option>
+            <option selected disabled>TECNICO ---</option>
             <optgroup label="Zona Norte" class="letraselect">
                 <option value="963">Cristian David Garcia Quintero</option>
                 <option value="1038">Juan Daniel Barrios</option>
             </optgroup>
             <optgroup label="Zona Centro" class="letraselect">
                 <option value="1235">Byron Stiven Ruiz Trujillo</option>
-                <option value="1166">Fabian Andres Ferro Aguilar</option>
+                <option value="1166">Fabian Andres Ferro Aguiar</option>
                 <option value="1033">Jhon Alexander Jimenez Reinoso</option>
                 <option value="1144">Kevin Alejandro Viñez Gonzalez</option>
                 <option value="1187">Nelson Montes</option>
-                <option value="950">Yennifer Hernandez</option>
+                <option value="950">Yenifer Hernandez</option>
             </optgroup>
             <optgroup label="Zona Sur" class="letraselect">
                 <option value="1351">Andres Fabian Mateus Mendez</option>
@@ -46,7 +46,7 @@
         </select>
 
         <select name="admin" id="admin" class="admin" title="Selecciona Administrador">
-            <option selected disabled>ADMIN</option>
+            <option selected disabled>ADMINISTRADOR ---</option>
             <optgroup label="Administradores" class="letraselect">
                 <option value="1128">Andres Felipe Uribe Rodriguez</option>
                 <option value="1064">Genaro Campuzano</option>
